[gd_scene load_steps=15 format=3 uid="uid://cxcx13o0vf0qj"]

[ext_resource type="Texture2D" uid="uid://2hpqmnlfrb4j" path="res://art/tilesets/plains.png" id="1_mvp42"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_rm0tr"]
[ext_resource type="Texture2D" uid="uid://dnslxox2hk7xk" path="res://art/tilesets/grass.png" id="2_dsvel"]
[ext_resource type="Texture2D" uid="uid://e2noqmdctke7" path="res://art/objects/objects.png" id="3_vx11d"]
[ext_resource type="PackedScene" uid="uid://ch162g7lbjb4v" path="res://scenes/player.tscn" id="4_m0jdw"]
[ext_resource type="PackedScene" uid="uid://21q7b3ih3mvr" path="res://scenes/enemy.tscn" id="5_dcofo"]
[ext_resource type="PackedScene" uid="uid://cse3ik44yfaod" path="res://scenes/ally_new.tscn" id="6_oeysb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s5c0h"]
texture = ExtResource("1_mvp42")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7l7il"]
texture = ExtResource("2_dsvel")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gajd7"]
texture = ExtResource("3_vx11d")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.59099, 0.883884, 3.35876, 1.23744, 8, 2.65165, 8, 8, -8, 8, -8, 2.65165, -4.77297, 2.65165)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.59099, 0.883884, 3.35876, 1.23744, 8, 2.65165, 8, 8, -8, 8, -8, 2.65165, -4.77297, 2.65165)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.8125, 2.0625, 6.6875, 6.1875, -6.8125, 5.9375, -6.8125, 1.9375)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.026, 4.77297, 14.6725, 4.41942, 16.0867, 7.95495, 10.7834, 14.3189, -11.844, 14.3189, -16.0867, 8.66206)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.36917, 13.2583, 8.66206, 13.2583, 9.01561, 17.1473, 7.6014, 21.0364, -7.95495, 21.0364, -9.01561, 17.1473)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.1976, -3.35876, 8, -3.0052, 11.844, 2.2981, 8, 8, -8, 8, -11.844, 5.48008, -12.1976, 1.23744)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.9047, 21.7435, -12.1976, 13.9654, -10.0763, 13.2583, 7.95495, 13.2583, 10.0763, 14.6725, 12.1976, 22.0971, 10.0763, 26.6933, -5.83363, 25.9862)

[sub_resource type="TileSet" id="TileSet_a34s6"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_s5c0h")
sources/1 = SubResource("TileSetAtlasSource_7l7il")
sources/2 = SubResource("TileSetAtlasSource_gajd7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr76q"]
size = Vector2(30, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la6df"]
size = Vector2(20, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlkre"]
size = Vector2(29, 64)

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_rm0tr")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_a34s6")
format = 2
layer_0/name = "Ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-131071, 131072, 1, -65534, 327680, 0, -65533, 131072, 1, 4, 196608, 1, 5, 1, 0, 65542, 1, 0, 65543, 1, 0, 131080, 1, 0, 131081, 1, 0, 196618, 1, 0, 196619, 1, 0, 262156, 131072, 0, 262157, 131072, 0, 327694, 131072, 1, 327695, 131072, 1, 393232, 131072, 2, 393233, 131072, 2, 458770, 1, 0, 458771, 1, 0, 524308, 1, 0, 524309, 1, 0, 589846, 1, 0, 589847, 1, 0, 655384, 1, 0, 655385, 1, 0, 720922, 1, 0, -65535, 131072, 2, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 655386, 1, 0, 589850, 1, 0, 524314, 1, 0, 458778, 1, 0, 393242, 131072, 2, 327706, 131072, 1, 262170, 131072, 0, 196634, 1, 0, 131098, 1, 0, 65562, 1, 0, 26, 1, 0, -65510, 1, 0, -131046, 1, 0, -131047, 1, 0, -131048, 1, 0, -131049, 1, 0, -131050, 1, 0, -131051, 1, 0, -131052, 1, 0, -131053, 1, 0, -131054, 1, 0, -131055, 1, 0, -131056, 1, 0, -131057, 1, 0, -131058, 1, 0, -131059, 1, 0, -131060, 1, 0, -131061, 1, 0, -131062, 1, 0, -131063, 1, 0, -131064, 1, 0, -131065, 1, 0, -131066, 1, 0, -131067, 1, 0, -131068, 196608, 1, -131069, 131072, 1, -131070, 131072, 1, -65532, 196608, 1, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, 25, 1, 0, 24, 1, 0, 23, 1, 0, 22, 1, 0, 21, 1, 0, 20, 1, 0, 19, 1, 0, 18, 1, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 65540, 196608, 1, 65541, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 131097, 1, 0, 131096, 1, 0, 131095, 1, 0, 131094, 1, 0, 131093, 1, 0, 131092, 1, 0, 131091, 1, 0, 131090, 1, 0, 131089, 1, 0, 131088, 1, 0, 131087, 1, 0, 131086, 1, 0, 131085, 1, 0, 131084, 1, 0, 131083, 1, 0, 131082, 1, 0, 131079, 1, 0, 131078, 1, 0, 131077, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 262159, 131072, 0, 262160, 131072, 0, 262161, 131072, 0, 262162, 131072, 0, 262163, 131072, 0, 262164, 131072, 0, 262165, 131072, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196628, 1, 0, 196627, 1, 0, 196626, 1, 0, 196625, 1, 0, 196624, 1, 0, 262158, 131072, 0, 262166, 131072, 0, 262167, 131072, 0, 262168, 131072, 0, 262169, 131072, 0, 327705, 131072, 1, 393241, 131072, 2, 458777, 1, 0, 524313, 1, 0, 589849, 1, 0, 589848, 1, 0, 524312, 1, 0, 458776, 1, 0, 393240, 131072, 2, 327704, 131072, 1, 327703, 131072, 1, 393239, 131072, 2, 458775, 1, 0, 524311, 1, 0, 655383, 1, 0, 655382, 1, 0, 524310, 1, 0, 458774, 1, 0, 393238, 131072, 2, 327702, 131072, 1, 327701, 131072, 1, 393237, 131072, 2, 458773, 1, 0, 589845, 1, 0, 655381, 1, 0, 655379, 1, 0, 589843, 1, 0, 524307, 1, 0, 393236, 131072, 2, 327700, 131072, 1, 458772, 1, 0, 589844, 1, 0, 655380, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 393234, 131072, 2, 327698, 131072, 1, 327699, 131072, 1, 393235, 131072, 2, 655377, 1, 0, 589841, 1, 0, 524305, 1, 0, 458769, 1, 0, 327697, 131072, 1, 327696, 131072, 1, 458768, 1, 0, 524304, 1, 0, 589840, 1, 0, 655376, 1, 0, 655375, 1, 0, 589839, 1, 0, 524303, 1, 0, 458767, 1, 0, 393231, 131072, 2, 393230, 131072, 2, 458766, 1, 0, 524302, 1, 0, 589838, 1, 0, 655374, 1, 0, 655373, 1, 0, 589837, 1, 0, 524301, 1, 0, 458765, 1, 0, 393229, 131072, 2, 327693, 131072, 1, 327692, 131072, 1, 393228, 131072, 2, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 589835, 1, 0, 655371, 1, 0, 655372, 1, 0, 524299, 1, 0, 458763, 1, 0, 393227, 131072, 2, 327691, 131072, 1, 262155, 131072, 0, 262154, 131072, 0, 327690, 131072, 1, 393226, 131072, 2, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 655370, 1, 0, 655369, 1, 0, 589833, 1, 0, 524297, 1, 0, 458761, 1, 0, 393225, 131072, 2, 327689, 131072, 1, 262153, 131072, 0, 262152, 131072, 0, 327688, 131072, 1, 393224, 131072, 2, 458760, 1, 0, 524296, 1, 0, 589832, 1, 0, 655368, 1, 0, 655367, 1, 0, 655366, 1, 0, 589830, 1, 0, 524294, 1, 0, 458758, 1, 0, 393222, 131072, 2, 327686, 131072, 1, 262150, 131072, 0, 262151, 131072, 0, 327687, 131072, 1, 393223, 131072, 2, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655365, 1, 0, 589829, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 131072, 2, 327685, 131072, 1, 262149, 131072, 0, 196612, 196608, 1, 131076, 196608, 1, 262148, 262144, 1, 327684, 131072, 1, 393220, 131072, 2, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 655364, 1, 0, 655363, 1, 0, 589827, 1, 0, 524291, 1, 0, 458755, 1, 0, 393219, 131072, 2, 327683, 131072, 1, 262147, 131072, 1, 196611, 131072, 1, 131075, 131072, 1, 65539, 131072, 1, 3, 131072, 1, 2, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 2, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 1, 0, -131045, 1, 0, -65509, 1, 0, 27, 1, 0, 65563, 1, 0, 131099, 1, 0, 196635, 1, 0, 262171, 131072, 0, 327707, 131072, 1, 393243, 131072, 2, 458779, 1, 0, 524315, 1, 0, 589851, 1, 0, 655387, 1, 0, 720923, 1, 0, 786459, 1, 0, 786458, 1, 0, 786457, 1, 0, 786456, 1, 0, 786455, 1, 0, 786454, 1, 0, 786453, 1, 0, 786452, 1, 0, 786451, 1, 0, 786450, 1, 0, 786449, 1, 0, 786448, 1, 0, 786447, 1, 0, 786446, 1, 0, 786445, 1, 0, 786444, 1, 0, 786443, 1, 0, 786442, 1, 0, 786441, 1, 0, 786440, 1, 0, 786439, 1, 0, 786438, 1, 0, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, -131044, 1, 0, -65508, 1, 0, 28, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 131072, 0, 327708, 131072, 1, 393244, 131072, 2, 458780, 1, 0, 524316, 1, 0, 589852, 1, 0, 655388, 1, 0, 720924, 1, 0, 786460, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, -262125, 1, 0, -262124, 1, 0, -262123, 1, 0, -262122, 1, 0, -262121, 1, 0, -262120, 1, 0, -262119, 1, 0, -262118, 1, 0, -262117, 1, 0, -262116, 1, 0, -196580, 1, 0, -196581, 1, 0, -196582, 1, 0, -196583, 1, 0, -196584, 1, 0, -196585, 1, 0, -196586, 1, 0, -196587, 1, 0, -196588, 1, 0, -196589, 1, 0, -196590, 1, 0, -196591, 1, 0, -196592, 1, 0, -196593, 1, 0, -196594, 1, 0, -196595, 1, 0, -196596, 1, 0, -196597, 1, 0, -196598, 1, 0, -196599, 1, 0, -196600, 1, 0, -196601, 1, 0, -196602, 1, 0, -196603, 1, 0, -196604, 196608, 0, -196605, 131072, 0, -196606, 131072, 0, -196607, 131072, 0, -262115, 1, 0, -196579, 1, 0, -131043, 1, 0, -65507, 1, 0, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 196637, 1, 0, 262173, 131072, 0, 327709, 131072, 1, 393245, 131072, 2, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, -262114, 1, 0, -196578, 1, 0, -131042, 1, 0, -65506, 1, 0, 30, 1, 0, 65566, 1, 0, 131102, 1, 0, 196638, 1, 0, 262174, 131072, 0, 327710, 131072, 1, 393246, 131072, 2, 458782, 1, 0, 524318, 1, 0, 589854, 1, 0, 655390, 1, 0, 720926, 1, 0, 786462, 1, 0, -262113, 1, 0, -196577, 1, 0, -131041, 1, 0, -65505, 1, 0, 31, 1, 0, 65567, 1, 0, 131103, 1, 0, 196639, 1, 0, 262175, 131072, 0, 327711, 131072, 1, 393247, 131072, 2, 458783, 1, 0, 524319, 1, 0, 589855, 1, 0, 655391, 1, 0, 720927, 1, 0, 786463, 1, 0, -262112, 1, 0, -196576, 1, 0, -131040, 1, 0, -65504, 1, 0, 32, 1, 0, 65568, 1, 0, 131104, 1, 0, 196640, 1, 0, 262176, 131072, 0, 327712, 131072, 1, 393248, 131072, 2, 458784, 1, 0, 524320, 1, 0, 589856, 1, 0, 655392, 1, 0, 720928, 1, 0, 786464, 1, 0, -262111, 1, 0, -196575, 1, 0, -131039, 1, 0, -65503, 1, 0, 33, 1, 0, 65569, 1, 0, 131105, 1, 0, 196641, 1, 0, 262177, 131072, 0, 327713, 131072, 1, 393249, 131072, 2, 458785, 1, 0, 524321, 1, 0, 589857, 1, 0, 655393, 1, 0, 720929, 1, 0, 786465, 1, 0, -262110, 1, 0, -196574, 1, 0, -131038, 1, 0, -65502, 1, 0, 34, 1, 0, 65570, 1, 0, 131106, 1, 0, 196642, 1, 0, 262178, 131072, 0, 327714, 131072, 1, 393250, 131072, 2, 458786, 1, 0, 524322, 1, 0, 589858, 1, 0, 655394, 1, 0, 720930, 1, 0, 786466, 1, 0, -262109, 1, 0, -196573, 1, 0, -131037, 1, 0, -65501, 1, 0, 35, 1, 0, 65571, 1, 0, 131107, 1, 0, 196643, 1, 0, 262179, 131072, 0, 327715, 131072, 1, 393251, 131072, 2, 458787, 1, 0, 524323, 1, 0, 589859, 1, 0, 655395, 1, 0, 720931, 1, 0, 786467, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 1, 0, -327669, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -327660, 1, 0, -327659, 1, 0, -327658, 1, 0, -327657, 1, 0, -327656, 1, 0, -327655, 1, 0, -327654, 1, 0, -327653, 1, 0, -327652, 1, 0, -327651, 1, 0, -327650, 1, 0, -327649, 1, 0, -327648, 1, 0, -327647, 1, 0, -327646, 1, 0, -327645, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 1, 0, -393198, 1, 0, -393197, 1, 0, -393196, 1, 0, -393195, 1, 0, -393194, 1, 0, -393193, 1, 0, -393192, 1, 0, -393191, 1, 0, -393190, 1, 0, -393189, 1, 0, -393188, 1, 0, -393187, 1, 0, -393186, 1, 0, -393185, 1, 0, -393184, 1, 0, -393183, 1, 0, -393182, 1, 0, -393181, 1, 0)
layer_1/name = "Cliff"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(-196574, 131072, 6, -196575, 131072, 6, -196576, 131072, 6, -196577, 131072, 6, -196578, 131072, 6, -196579, 131072, 6, -196580, 131072, 6, -196581, 131072, 6, -196582, 131072, 6, -196583, 131072, 6, -196584, 131072, 6, -196585, 131072, 6, -196586, 131072, 6, -196587, 131072, 6, -196588, 131072, 6, -327646, 131072, 5, -262110, 131072, 5, -262111, 131072, 5, -262112, 131072, 5, -262113, 131072, 5, -262114, 131072, 5, -262115, 131072, 5, -262116, 131072, 5, -262117, 131072, 5, -262118, 131072, 5, -262119, 131072, 5, -262120, 131072, 5, -262121, 131072, 5, -262122, 131072, 5, -262123, 131072, 5, -262124, 131072, 5, -327660, 131072, 5, -327659, 131072, 5, -327658, 131072, 5, -327657, 131072, 5, -327656, 131072, 5, -327655, 131072, 5, -327654, 131072, 5, -327653, 131072, 5, -327652, 131072, 5, -327651, 131072, 5, -327650, 131072, 5, -327649, 131072, 5, -327648, 131072, 5, -327647, 131072, 5, -196573, 196608, 6, -262109, 196608, 5, -327645, 196608, 5, -393181, 196608, 5, -393182, 131072, 5, -393183, 131072, 5, -393184, 131072, 5, -393185, 131072, 5, -393186, 131072, 5, -393187, 131072, 5, -393188, 131072, 5, -393189, 131072, 5, -393190, 131072, 5, -393191, 131072, 5, -393192, 131072, 5, -393193, 131072, 5, -393194, 131072, 5, -393195, 131072, 5, -393196, 131072, 5, -196589, 65536, 6, -262125, 65536, 5, -327661, 65536, 5, -393197, 65536, 5, -327675, 655362, 7, 65547, 655362, 7, 26, 655362, 7, 786438, 655362, 7, 655379, 655362, 7, 852000, 655362, 7, -196601, 2, 5, 65544, 2, 5, -262132, 2, 5, -262128, 2, 5, 14, 2, 5, 19, 2, 5, -65513, 2, 5, 65566, 2, 5, -65503, 2, 5, 524291, 2, 5, 786435, 2, 5, 655366, 2, 5, 524297, 2, 5, 655371, 2, 5, 786441, 2, 5, 524302, 2, 5, 524305, 2, 5, 524310, 2, 5, 524314, 2, 5, 524318, 2, 5, 524322, 2, 5, 786460, 2, 5, 786456, 2, 5, 786452, 2, 5, 786447, 2, 5, 720928, 393218, 7, 524307, 393218, 7, 131098, 393218, 7, -65526, 393218, 7, 589825, 327682, 0, 524289, 327682, 0, 720922, 327682, 0, 786458, 327682, 0, -131043, 327682, 0, -131042, 327682, 0, -131041, 327682, 0, 196613, 2, 0, 196643, 2, 0, -262143, 2, 0, 65552, 2, 1, 131095, 2, 1, -131044, 2, 1, 786449, 2, 1)

[node name="Player" parent="." instance=ExtResource("4_m0jdw")]
position = Vector2(62, 1)

[node name="Enemy" parent="." instance=ExtResource("5_dcofo")]
position = Vector2(351, 66)

[node name="Ally_new" parent="." instance=ExtResource("6_oeysb")]
position = Vector2(196, 41)

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
polygon = PackedVector2Array(17, -52, 17, -95, 273, -95, 273, -115, 303, -115, 302, -32, 573, -31, 574, 49, 604, 50, 605, 113, 574, 113, 574, 237, 17, 239, 17, 3, -4, 3, -4, -52, 13, -52, -4, -63, -22, -62, -22, 265, 595, 267, 595, 143, 641, 143, 638, 25, 592, 21, 589, -125, 2, -125)

[node name="level_1_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_1_transition"]
position = Vector2(288, -105)
shape = SubResource("RectangleShape2D_hr76q")

[node name="level_2_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_2_transition"]
position = Vector2(6, -24.5)
shape = SubResource("RectangleShape2D_la6df")

[node name="level_3_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_3_transition"]
position = Vector2(589.5, 81)
shape = SubResource("RectangleShape2D_vlkre")

[connection signal="body_entered" from="level_1_transition" to="." method="_on_level_1_transition_body_entered"]
[connection signal="body_exited" from="level_1_transition" to="." method="_on_level_1_transition_body_exited"]
[connection signal="body_entered" from="level_2_transition" to="." method="_on_level_2_transition_body_entered"]
[connection signal="body_exited" from="level_2_transition" to="." method="_on_level_2_transition_body_exited"]
[connection signal="body_entered" from="level_3_transition" to="." method="_on_level_3_transition_body_entered"]
[connection signal="body_exited" from="level_3_transition" to="." method="_on_level_3_transition_body_exited"]
